Demos: Adjusted font for slider handle labels, fixed broken css link

--- a/docs/examples/slider/slider.tooltip.css
+++ b/docs/examples/slider/slider.tooltip.css
@@ -1,5 +1,6 @@
 .ui-slider .ui-btn-inner {
-    padding: 4px 0 0 0 !important;
+    padding: 5px 0 0 0 !important;
+	font-size:.8em;
 }
 
 .ui-slider-popup {
